changes on main before refactoring, got rid of use of multi-floor

--- a/UnitySample/Packages/manifest.json
+++ b/UnitySample/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.microsoft.spatialaudio.spatializer.unity": "file:MixedReality/com.microsoft.spatialaudio.spatializer.unity-2.0.37.tgz",
     "com.microsoft.windows.mixedreality.dotnetwinrt": "file:MixedReality/com.microsoft.windows.mixedreality.dotnetwinrt-0.5.2009.tgz",
     "com.unity.collab-proxy": "1.17.2",
+    "com.unity.formats.fbx": "5.0.0",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
